--- a/app/views/reservations/index.html.slim
+++ b/app/views/reservations/index.html.slim
@@ -1,1 +1,3 @@
-
+- @schedules.each do |schedule|
+    li = link_to reservation_path(schedule) do
+      | #{schedule.start.strftime("%Y年%m月%d日%H時")} ~ #{schedule.close.strftime("%Y年%m月%d日%H時")}
