--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,10 +5,9 @@ html
       | ReservationApp
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application'
-    = stylesheet_pack_tag 'application'
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
       a.navbar-brand href="/"  予約アプリ
